Correctif sur le contraste

--- a/style.css
+++ b/style.css
@@ -672,7 +672,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #333!important;
 }
 
 .container {
